replacing task sidebar with a more intuitive tasks UI
Moving GANTT chart and task header to the sidebar

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -37,6 +37,9 @@ de:
   deleted:
     conversation: "Konversation <b>{{name}}</b> gelöscht"
     task: "Aufgabe <b>{{name}}</b> gelöscht"
+    #####
+    task_list: "Deleted <b>{{name}}</b> task list"
+    task: "Aufgabe <b>{{name}}</b> gelöscht"
     page: "Seite <b>{{name}}</b> gelöscht"
     upload: "Datei <b>{{name}}</b> gelöscht"
     person: "{{name}} ist nicht mehr Teilnehmer in diesem Projekt"
