--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -554,19 +554,36 @@ es:
     archived:
       title: Todas las tareas archivadas
       description: "Estas son las tareas archivadas, al haber sido completadas o rechazadas."
+    ####
+    archive_box:
+      unarchive_list: This task list is archived.
+    actions:
+      resolve_and_archive: "Resolve all tasks and archive"
+      confirm_resolve_and_archive: "Are you sure you want to resolve and archive this task list?"
+      archive: "archive this task list"
+      rename: "Rename task list"
+      set_dates: "Set the start & end date"
     fields:
       task_list: Una lista de tareas define un hito en el proyecto. Dentro puedes crear Tareas y asignarlas a otras personas.
       name: Lista de Tareas
       start_on: Empieza el... <i>opcional</i>
       finish_on: Termina el... <i>opcional</i>
+    ####
+    filter:
+      due_date: "Display tasks with due date..."
+      assigned_to: "Display tasks assigned to..."
     link:
       new: Nueva lista de tareas
       edit: Editar
       reorder: Reordenar
+      ####
+      reorder_done: Done reorder
+      unarchive: Unarchive
     index:
       add_link: Nueva lista de tareas
       empty: No hay tareas en esta categoría
       tasks_for_all_projects: Tareas para todos los proyectos
+      tasks_for_project: Task lists for this project
     primer:
       empty: Aún no hay ninguna conversación en este proyecto.
       create_first: Crea la primera lista de tareas!
@@ -577,6 +594,12 @@ es:
       item4: "<b>Revisa</b>. Una tarea completada no se borra, de forma que después puedes ver qué se hizo."
       footer1: "Es una forma sencilla y ágil de <b>conseguir hacer lo que te propones</b> y hacerlo saber."
       footer2: "¡Ya es hora de olvidar los plannings en Excel y los complejos diagramas GANTT!"
+    ####
+    overview_box:
+      this_list: "This task list"
+      starts_on: "Starts on:"
+      ends_on: "Ends on:"
+      undefined: "Undefined"
     new:
       title: Nueva lista de tareas
       submit: Añadir
@@ -630,6 +653,10 @@ es:
       commented_on_a_task_list: "-"
       confirm_delete: Seguro que quieres borrar este comentario?
       hours_hrs: "{{hours}}H"
+    ####
+    hours:
+      add_hours: Hours
+      hours: How many hours did you put into this task?
     new:
       assigned_to_nobody: Sin asignar
       assigned_to: "Asignado a:"
