--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -589,6 +589,7 @@ en:
       empty: No tasks in this category!
       tasks_for_all_projects: Tasks across all projects
       tasks_for_project: Task lists for this project
+      other_views: Other views
     primer:
       empty: This project doesn't have any conversations yet.
       create_first: Create the first task list in this project!
@@ -613,6 +614,7 @@ en:
       new_task_list: New Task List
       cant_create: You don't have permission to create tasks in this project
       subscribe: Subscribe to the news feed
+      other_views: Other views
     show:
       title: "Task List: {{name}}"
     destroy_message:
