--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -456,6 +456,8 @@ it:
     fields:
       name: "What needs to be done?" ######
       due_on: "Needs to be done before... <i>(optional)</i>" #####
+      assigned_to: Who is responsible?
+      assigned_to_nobody: Nobody
     assigned:
       assigned_to: "Responsabile: {{user}}"
     due_on:
