--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -439,6 +439,9 @@ ru:
     fields:
       name: Что нужно сделать?
       due_on: Нужно сделать перед... <i>(не обяз.)</i>
+      ####
+      assigned_to: Who is responsible?
+      assigned_to_nobody: Nobody
     assigned:
       assigned_to: "Назначена {{user}}"
     due_on:
