--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -441,6 +441,9 @@ zh:
     fields:
       name: 有哪些任务需要完成？
       due_on: 需要在...之前完成 <i>(可选)</i>
+      ####
+      assigned_to: Who is responsible?
+      assigned_to_nobody: Nobody
     assigned:
       assigned_to: "分配给{{user}}"
     due_on:
