--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -456,6 +456,8 @@ ca:
     fields:
       name: "What needs to be done?" ######
       due_on: Needs to be done before... <i>(optional)</i> #####
+      assigned_to: Who is responsible?
+      assigned_to_nobody: Nobody
     assigned:
       assigned_to: "Responsable: {{user}}"
     due_on:
