--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -568,6 +568,7 @@ ja:
       archive: "archive this task list"
       rename: "Rename task list"
       set_dates: "Set the start & end date"
+      show_archived: "View {{count}} archived tasks"
     fields:
       task_list: タスクリストはあなたのプロジェクトのマイルストーンになります。タスクリストの中にタスクを作成して、人々にアサインできます。
       name: タスクリスト名
